syntax = "proto3";

option go_package = "github.com/LagrangeDev/LagrangeGo/client/packets/pb/message";

message Elem {
  optional Text Text = 1;
  optional Face Face = 2;
  optional OnlineImage OnlineImage = 3;
  optional NotOnlineImage NotOnlineImage = 4;
  optional TransElem TransElem = 5;
  optional MarketFace MarketFace = 6;
  optional CustomFace CustomFace = 8;
  optional ElemFlags2 ElemFlags2 = 9;
  optional RichMsg RichMsg = 12;
  optional GroupFile GroupFile = 13;
  optional ExtraInfo ExtraInfo = 16;
  optional VideoFile VideoFile = 19;
  optional AnonymousGroupMessage AnonymousGroupMessage = 21;
  optional QQWalletMsg QQWalletMsg = 24;
  optional CustomElem CustomElem = 31;
  optional GeneralFlags GeneralFlags = 37;
  optional SrcMsg SrcMsg = 45;
  optional LightAppElem LightAppElem = 51;
  optional CommonElem CommonElem = 53;
}

message AnonymousGroupMessage {
  int32 Flags = 1;
  bytes AnonId = 2;
  bytes AnonNick = 3;
  int32 HeadPortrait = 4;
  int32 ExpireTime = 5;
  int32 BubbleId = 6;
  bytes RankColor = 7;
}

message CommonElem {
  int32 ServiceType = 1;
  bytes PbElem = 2;
  uint32 BusinessType = 3;
}

message CustomElem {
  bytes Desc = 1;
  bytes Data = 2;
  int32 EnumType = 3;
  bytes Ext = 4;
  bytes Sound = 5;
}

message CustomFace {
  bytes Guid = 1;
  string FilePath = 2;
  string Shortcut = 3;
  bytes Buffer = 4;
  bytes Flag = 5;
  optional bytes OldData = 6;
  uint32 FileId = 7;
  optional int32 ServerIp = 8;
  optional int32 ServerPort = 9;
  int32 FileType = 10;
  bytes Signature = 11;
  int32 Useful = 12;
  bytes Md5 = 13;
  string ThumbUrl = 14;
  string BigUrl = 15;
  string OrigUrl = 16;
  int32 BizType = 17;
  int32 RepeatIndex = 18;
  int32 RepeatImage = 19;
  int32 ImageType = 20;
  int32 Index = 21;
  int32 Width = 22;
  int32 Height = 23;
  int32 Source = 24;
  uint32 Size = 25;
  int32 Origin = 26;
  optional int32 ThumbWidth = 27;
  optional int32 ThumbHeight = 28;
  int32 ShowLen = 29;
  int32 DownloadLen = 30;
  optional string X400Url = 31;
  int32 X400Width = 32;
  int32 X400Height = 33;
  optional PbReserve PbRes = 34;
  message PbReserve {
    int32 SubType = 1;
    string Summary = 9;
  }
}

message ElemFlags2 {
  uint32 ColorTextId = 1;
  uint64 MsgId = 2;
  uint32 WhisperSessionId = 3;
  uint32 PttChangeBit = 4;
  uint32 VipStatus = 5;
  uint32 CompatibleId = 6;
  repeated Instance Insts = 7;
  uint32 MsgRptCnt = 8;
  Instance SrcInst = 9;
  uint32 Longtitude = 10;
  uint32 Latitude = 11;
  uint32 CustomFont = 12;
  PcSupportDef PcSupportDef = 13;
  optional uint32 CrmFlags = 14;
}

message PcSupportDef {
  uint32 PcPtlBegin = 1;
  uint32 PcPtlEnd = 2;
  uint32 MacPtlBegin = 3;
  uint32 MacPtlEnd = 4;
  repeated int32 PtlsSupport = 5;
  repeated uint32 PtlsNotSupport = 6;
}

message Instance {
  uint32 AppId = 1;
  uint32 InstId = 2;
}

message ExtraInfo {
  bytes Nick = 1;
  bytes GroupCard = 2;
  int32 Level = 3;
  int32 Flags = 4;
  int32 GroupMask = 5;
  int32 MsgTailId = 6;
  bytes SenderTitle = 7;
  bytes ApnsTips = 8;
  uint64 Uin = 9;
  int32 MsgStateFlag = 10;
  int32 ApnsSoundType = 11;
  int32 NewGroupFlag = 12;
}

message Face {
  optional int32 Index = 1;
  optional bytes Old = 2;
  optional bytes Buf = 11;
}

message GeneralFlags {
  int32 BubbleDiyTextId = 1;
  int32 GroupFlagNew = 2;
  uint64 Uin = 3;
  bytes RpId = 4;
  int32 PrpFold = 5;
  int32 LongTextFlag = 6;
  optional string LongTextResId = 7;
  int32 GroupType = 8;
  int32 ToUinFlag = 9;
  int32 GlamourLevel = 10;
  int32 MemberLevel = 11;
  uint64 GroupRankSeq = 12;
  int32 OlympicTorch = 13;
  bytes BabyqGuideMsgCookie = 14;
  int32 Uin32ExpertFlag = 15;
  int32 BubbleSubId = 16;
  uint64 PendantId = 17;
  bytes RpIndex = 18;
  bytes PbReserve = 19;
}

message GroupFile {
  bytes Filename = 1;
  uint64 FileSize = 2;
  bytes FileId = 3;
  bytes BatchId = 4;
  bytes FileKey = 5;
  bytes Mark = 6;
  uint64 Sequence = 7;
  bytes BatchItemId = 8;
  int32 FeedMsgTime = 9;
  bytes PbReserve = 10;
}

message LightAppElem {
  bytes Data = 1;
  optional bytes MsgResid = 2;
}

message MarketFace {
  bytes FaceName = 1;
  int32 ItemType = 2;
  int32 FaceInfo = 3;
  bytes FaceId = 4;
  int32 TabId = 5;
  int32 SubType = 6;
  bytes Key = 7;
  bytes Param = 8;
  int32 MediaType = 9;
  int32 ImageWidth = 10;
  int32 ImageHeight = 11;
  bytes Mobileparam = 12;
  bytes PbReserve = 13;
}

message NotOnlineImage {
  string FilePath = 1;
  uint32 FileLen = 2;
  string DownloadPath = 3;
  bytes OldVerSendFile = 4;
  int32 ImgType = 5;
  bytes PreviewsImage = 6;
  bytes PicMd5 = 7;
  uint32 PicHeight = 8;
  uint32 PicWidth = 9;
  string ResId = 10;
  bytes Flag = 11;
  string ThumbUrl = 12;
  int32 Original = 13;
  string BigUrl = 14;
  string OrigUrl = 15;
  int32 BizType = 16;
  int32 Result = 17;
  int32 Index = 18;
  bytes OpFaceBuf = 19;
  bool OldPicMd5 = 20;
  int32 ThumbWidth = 21;
  int32 ThumbHeight = 22;
  int32 FileId = 23;
  uint32 ShowLen = 24;
  uint32 DownloadLen = 25;
  string X400Url = 26;
  int32 X400Width = 27;
  int32 X400Height = 28;
  PbReserve PbRes = 29;

  message PbReserve {
    int32 SubType = 1;
    int32 Field3 = 3;
    int32 Field4 = 4;
    string Summary = 8;
    int32 Field10 = 10;
    PbReserve2 Field20 = 20;
    string Url = 30;
    string Md5Str = 31;

    message PbReserve2 {
      int32 Field1 = 1;
      string Field2 = 2;
      int32 Field3 = 3;
      int32 Field4 = 4;
      int32 Field5 = 5;
      string Field7 = 7;
    }
  }
}

message OnlineImage {
  bytes Guid = 1;
  bytes FilePath = 2;
  bytes OldVerSendFile = 3;
}

message QQWalletMsg {
  QQWalletAioBody Type = 1;
}

message QQWalletAioBody {
  uint64 SendUin = 1;
  QQWalletAioElem Sender = 2;
  QQWalletAioElem Receiver = 3;
  sint32 ChannelId = 4;
  sint32 TemplateId = 5;
  uint32 Resend = 6;
  uint32 MsgPriority = 7;
  sint32 RedType = 8;
  bytes BillNo = 9;
  bytes AuthKey = 10;
  sint32 SessionType = 11;
  sint32 MsgType = 12;
  sint32 EnvelOpeId = 13;
  bytes Name = 14;
  sint32 ConfType = 15;
  sint32 MsgFrom = 16;
  bytes PcBody = 17;
  bytes Index = 18;
  uint32 RedChannel = 19;
  uint64 GrapUin = 20;
  bytes PbReserve = 21;
}

message QQWalletAioElem {
  uint32 Background = 1;
  uint32 Icon = 2;
  string Title = 3;
  string Subtitle = 4;
  string Content = 5;
  bytes LinkUrl = 6;
  bytes BlackStripe = 7;
  bytes Notice = 8;
  uint32 TitleColor = 9;
  uint32 SubtitleColor = 10;
  bytes ActionsPriority = 11;
  bytes JumpUrl = 12;
  bytes NativeIos = 13;
  bytes NativeAndroid = 14;
  bytes IconUrl = 15;
  uint32 ContentColor = 16;
  uint32 ContentBgColor = 17;
  bytes AioImageLeft = 18;
  bytes AioImageRight = 19;
  bytes CftImage = 20;
  bytes PbReserve = 21;
}

message RedBagInfo {
  optional uint32 RedBagType = 1;
}

message RichMsg {
  optional bytes Template1 = 1;
  optional int32 ServiceId = 2;
  optional bytes MsgResId = 3;
  optional int32 Rand = 4;
  optional uint32 Seq = 5;
}

message SrcMsg {
  repeated uint32 OrigSeqs = 1;
  uint64 SenderUin = 2;
  optional int32 Time = 3;
  optional int32 Flag = 4;
  repeated Elem Elems = 5;
  optional int32 Type = 6;
  optional bytes RichMsg = 7;
  optional bytes PbReserve = 8;
  optional bytes SourceMsg = 9;
  optional uint64 ToUin = 10;
  optional bytes TroopName = 11;
}

message Preserve {
  uint64 MessageId = 3;
  string SenderUid = 6;
  string ReceiverUid = 7;
  uint32 ClientSequence = 8;
}

message Text {
  optional string Str = 1;
  optional string Lint = 2;
  optional bytes Attr6Buf = 3;
  optional bytes Attr7Buf = 4;
  optional bytes Buf = 11;
  optional bytes PbReserve = 12;
}

message TransElem {
  int32 ElemType = 1;
  bytes ElemValue = 2;
}

message VideoFile {
  string FileUuid = 1;
  bytes FileMd5 = 2;
  string FileName = 3;
  int32 FileFormat = 4;
  int32 FileTime = 5;
  int32 FileSize = 6;
  int32 ThumbWidth = 7;
  int32 ThumbHeight = 8;
  bytes ThumbFileMd5 = 9;
  bytes Source = 10;
  int32 ThumbFileSize = 11;
  int32 BusiType = 12;
  int32 FromChatType = 13;
  int32 ToChatType = 14;
  bool BoolSupportProgressive = 15;
  int32 FileWidth = 16;
  int32 FileHeight = 17;
  int32 SubBusiType = 18;
  int32 VideoAttr = 19;
  repeated bytes BytesThumbFileUrls = 20;
  repeated bytes BytesVideoFileUrls = 21;
  int32 ThumbDownloadFlag = 22;
  int32 VideoDownloadFlag = 23;
  bytes PbReserve = 24;
}

// extra

message CustomFaceExtra {
  optional string Hash = 31;
}

message FaceExtra {
  optional int32 FaceId = 1;
}

message ImageExtra {
  uint32 Field85 = 85;
}

message MentionExtra {
  optional int32 Type = 3;
  optional uint32 Uin = 4;
  optional int32 Field5 = 5;
  optional string Uid = 9;
}

message QFaceExtra {
  optional string PackId = 1;
  optional string StickerId = 2;
  optional int32 Qsid = 3;
  optional int32 SourceType = 4;
  optional int32 StickerType = 5;
  optional string ResultId = 6;
  optional string Text = 7;
  //optional bytes SurpriseId = 8;
  optional int32 RandomType = 9;
}

message QSmallFaceExtra {
  uint32 FaceId = 1;
  string Preview = 2;
  string Preview2 = 3;
}

