syntax = "proto3";

option go_package = "github.com/LagrangeDev/LagrangeGo/pkg/pb/message";

import "pb/message/element.proto";

message Attr {
  int32 CodePage = 1;
  int32 Time = 2;
  int32 Random = 3;
  int32 Color = 4;
  int32 Size = 5;
  int32 Effect = 6;
  int32 CharSet = 7;
  int32 PitchAndFamily = 8;
  string FontName = 9;
  bytes ReserveData = 10;
}

message GroupInfo {
  uint64 GroupCode = 1;
  int32 GroupType = 2;
  int64 GroupInfoSeq = 3;
  string GroupCard = 4;
  int32 GroupLevel = 5;
  int32 GroupCardType = 6;
  bytes GroupName = 7;
}

message MutilTransHead {
  int32 Status = 1;
  int32 MsgId = 2;
}

message NotOnlineFile {
  optional int32 FileType = 1;
  optional bytes Sig = 2;
  optional string FileUuid = 3;
  optional bytes FileMd5 = 4;
  optional string FileName = 5;
  optional int64 FileSize = 6;
  optional bytes Note = 7;
  optional int32 Reserved = 8;
  optional int32 Subcmd = 9;
  optional int32 MicroCloud = 10;
  repeated bytes BytesFileUrls = 11;
  optional int32 DownloadFlag = 12;
  optional int32 DangerEvel = 50;
  optional int32 LifeTime = 51;
  optional int32 UploadTime = 52;
  optional int32 AbsFileType = 53;
  optional int32 ClientType = 54;
  optional int32 ExpireTime = 55;
  optional bytes PbReserve = 56;
  optional string FileHash = 57;
}

message Ptt {
  int32 FileType = 1;
  uint64 SrcUin = 2;
  string FileUuid = 3;
  bytes FileMd5 = 4;
  string FileName = 5;
  int32 FileSize = 6;
  bytes Reserve = 7;
  int32 FileId = 8;
  int32 ServerIp = 9;
  int32 ServerPort = 10;
  bool BoolValid = 11;
  bytes Signature = 12;
  bytes Shortcut = 13;
  bytes FileKey = 14;
  int32 MagicPttIndex = 15;
  int32 VoiceSwitch = 16;
  bytes PttUrl = 17;
  string GroupFileKey = 18;
  int32 Time = 19;
  bytes DownPara = 20;
  int32 Format = 29;
  bytes PbReserve = 30;
  repeated bytes BytesPttUrls = 31;
  int32 DownloadFlag = 32;
}

message RichText {
  optional Attr Attr = 1;
  repeated Elem Elems = 2;
  optional NotOnlineFile NotOnlineFile = 3;
  optional Ptt Ptt = 4;
}

// extra

// ButtonExtra start

message ButtonExtra {
  KeyboardData Data = 1;
}

message KeyboardData {
  repeated Row Rows = 1;
}

message Row {
  repeated Button Buttons = 1;
}

message Button {
  string ID = 1;
  RenderData RenderData = 2;
  Action Action = 3;

}

message RenderData {
  string Label = 1;
  string VisitedLabel = 2;
  int32 Style = 3;
}

message Action {
  int32 Type = 1;
  Permission Permission = 2;
  // uint64 ClickLimit = 3;
  string UnsupportTips = 4;
  string Data = 5;
  bool Reply = 7;
  bool Enter = 8;
}

message Permission {
  int32 Type = 1;
  repeated string SpecifyRoleIds = 2;
  repeated string SpecifyUserIds = 3;
}

// ButtonExtra end

message FileExtra {
  NotOnlineFile File = 1;
}

// GroupFileExtra start

message GroupFileExtra {
  uint32 Field1 = 1;
  string FileName = 2;
  string Display = 3;
  GroupFileExtraInner Inner = 7;
}

message GroupFileExtraInner {
  GroupFileExtraInfo Info = 2;
}

message GroupFileExtraInfo {
  uint32 BusId = 1;
  string FileId = 2;
  uint64 FileSize = 3;
  string FileName = 4;
  uint32 Field5 = 5;
  string Field7 = 7;
  string FileMd5 = 8;
}

// GroupFileExtra end

message ImageExtraUrl {
  string OrigUrl = 30;
}

message PokeExtra {
  uint32 Type = 1;
  uint32 Field7 = 7;
  uint32  Field8 = 8;
}

